--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "ubiquiti-project",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^18.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "export": "next export",
     "postinstall": "husky install",
     "prepare": "husky install"
   },
