--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "ubiquiti-project",
-  "version": "0.1.0",
-  "private": true,
-  "engines": {
-    "node": "^18.0.0"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
-    "postinstall": "husky install",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "eslint": "^8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "eslint-plugin-react": "^7.33.2",
-    "husky": "^8.0.0",
-    "lint-staged": "^14.0.1"
-  }
+	"name": "ubiquiti-project",
+	"version": "0.1.0",
+	"private": true,
+	"engines": {
+		"node": "^18.0.0"
+	},
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"format": "prettier --config .prettierrc -w .",
+		"lint": "next lint",
+		"export": "next export",
+		"postinstall": "husky install",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"@types/node": "20.5.7",
+		"@types/react": "18.2.21",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.15",
+		"eslint": "^8.48.0",
+		"eslint-config-next": "13.4.19",
+		"eslint-config-prettier": "^8.5.0",
+		"next": "13.4.19",
+		"postcss": "8.4.28",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.10.1",
+		"prettier": "^2.7.1",
+		"tailwindcss": "3.3.3",
+		"typescript": "5.2.2"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^6.5.0",
+		"@typescript-eslint/parser": "^6.5.0",
+		"eslint-plugin-react": "^7.33.2",
+		"husky": "^8.0.0",
+		"lint-staged": "^14.0.1"
+	}
 }
