--- a/package.json
+++ b/package.json
@@ -13,22 +13,25 @@
 		"lint": "next lint",
 		"export": "next export",
 		"postinstall": "husky install",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"precommit": "lint-staged"
 	},
 	"dependencies": {
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.15",
+		"axios": "^1.5.0",
 		"eslint": "^8.48.0",
 		"eslint-config-next": "13.4.19",
 		"eslint-config-prettier": "^8.5.0",
 		"next": "13.4.19",
 		"postcss": "8.4.28",
+		"prettier": "^2.7.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-error-boundary": "^4.0.11",
 		"react-icons": "^4.10.1",
-		"prettier": "^2.7.1",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.2.2"
 	},
@@ -38,5 +41,12 @@
 		"eslint-plugin-react": "^7.33.2",
 		"husky": "^8.0.0",
 		"lint-staged": "^14.0.1"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": [
+			"prettier --write",
+			"eslint --fix",
+			"git add"
+		]
 	}
 }
