Fix 404s, meta tags

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_BASE_PATH=/Ubiquiti-Project
+NEXT_PUBLIC_WEBSITE_URL=http://okami.codes/Ubiquiti-Project
+NEXT_PUBLIC_DOMAIN=okami.codes/Ubiquiti-Project
