--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.15",
 		"axios": "^1.5.0",
+		"classnames": "^2.3.2",
 		"eslint": "^8.48.0",
 		"eslint-config-next": "13.4.19",
 		"eslint-config-prettier": "^8.5.0",
