--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"export": "next export",
 		"postinstall": "husky install",
 		"prepare": "husky install",
-		"precommit": "lint-staged"
+		"precommit": "lint-staged",
+		"test": "jest --watch"
 	},
 	"dependencies": {
 		"@types/node": "20.5.7",
@@ -37,17 +38,25 @@
 		"typescript": "5.2.2"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.1.3",
+		"@testing-library/react": "14.0.0",
+		"@testing-library/user-event": "14.4.3",
+		"@types/jest": "^29.5.4",
+		"@types/testing-library__jest-dom": "^6.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.5.0",
 		"@typescript-eslint/parser": "^6.5.0",
 		"eslint-plugin-react": "^7.33.2",
 		"husky": "^8.0.0",
+		"jest": "29.6.4",
+		"jest-environment-jsdom": "29.6.4",
 		"lint-staged": "^14.0.1"
 	},
 	"lint-staged": {
-		"*.{js,jsx,ts,tsx}": [
+		"*.{ts,tsx}": [
 			"prettier --write",
 			"eslint --fix",
 			"git add"
-		]
+		],
+  		"!(__tests__/**)": []
 	}
 }
