--- a/package.json
+++ b/package.json
@@ -38,8 +38,12 @@
 		"typescript": "5.2.2"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.22.15",
+		"@babel/preset-react": "^7.22.15",
+		"@babel/preset-typescript": "^7.22.15",
+		"@jest/globals": "^29.5.0",
 		"@testing-library/jest-dom": "^6.1.3",
-		"@testing-library/react": "14.0.0",
+		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "14.4.3",
 		"@types/jest": "^29.5.4",
 		"@types/testing-library__jest-dom": "^6.0.0",
@@ -49,7 +53,11 @@
 		"husky": "^8.0.0",
 		"jest": "29.6.4",
 		"jest-environment-jsdom": "29.6.4",
-		"lint-staged": "^14.0.1"
+		"lint-staged": "^14.0.1",
+		"ts-jest": "^29.1.1",
+		"ts-node": "^10.9.1",
+		"tsconfig-paths": "^4.2.0",
+		"tsconfig-paths-jest": "^0.0.1"
 	},
 	"lint-staged": {
 		"*.{ts,tsx}": [
@@ -57,6 +65,6 @@
 			"eslint --fix",
 			"git add"
 		],
-  		"!(__tests__/**)": []
+		"!(__tests__/**)": []
 	}
 }
