--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"postinstall": "husky install",
 		"prepare": "husky install",
 		"precommit": "lint-staged",
-		"test": "jest --watch"
+		"test": "jest"
 	},
 	"dependencies": {
 		"@types/node": "20.5.7",
@@ -64,7 +64,6 @@
 			"prettier --write",
 			"eslint --fix",
 			"git add"
-		],
-		"!(__tests__/**)": []
+		]
 	}
 }
